--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "Todo app with vue and express",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Ribb",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.7.13"
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.13",
+    "mongoose-timestamp": "^0.6.0",
+    "validator": "^12.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
