--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "dexie": "^2.0.4",
     "validator": "^12.1.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
