--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.13",
+    "mongoose": "^5.8.7",
     "mongoose-timestamp": "^0.6.0",
+    "npm": "^6.13.6",
     "validator": "^12.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.1"
+    "nodemon": "^2.0.2"
   }
 }
