--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "validator": "^12.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
+    "vuedraggable": "^2.23.2",
     "vuetify": "^2.2.5",
     "vuex": "^3.1.2"
   },
